# ksu_props

./: Cargo.toml  README.md  README.zh-CN.md
.cargo/: config.toml
crates/prop-rs/: Cargo.toml
crates/prop-rs-android/: Cargo.toml
crates/prop-rs-android/src/: lib.rs  mmap_prop_area.rs  persist.rs  resetprop.rs  sys_prop.rs
crates/prop-rs/src/: lib.rs  persistent_prop.rs  prop_area.rs  prop_info.rs  property_context.rs
crates/prop-rs/tests/: file_read.rs  file_write.rs  persistent_prop.rs  prop_area.rs
crates/prop-rs/tests/fixtures/: sample_props.prop
src/: lib.rs  persistent_prop.rs  prop_area.rs  prop_info.rs  property_context.rs
tests/: persistent_prop.rs  prop_area.rs  test_resetprop.sh
tools/cargo-android-sysprop/: Cargo.toml
tools/cargo-android-sysprop/src/: main.rs  resetprop-tester.rs  resetprop.rs
tools/gen-sample-props/: Cargo.toml
tools/gen-sample-props/src/: main.rs
tools/resetprop/: Cargo.toml
tools/resetprop/src/: main.rs  test_main.rs
tools/sysprop/: Cargo.toml
tools/sysprop/src/: main.rs  read_props.rs  write_props.rs
